tests/NormalTests/paczka1/small_fuzzy/58009704.err
Error in line 1: kkLq A687 11,1
Error in line 12: A899 A899 43,7
